Commit 35: método modify de BookServiceTest, BookControllerTest, UserServiceTest y UserControllerTest. También LoanServiceTest y LoanControllerTest, sin embargo da error en Postman. No parece haber error en el código pero está creando nueva Loan en lugar de modificar.